fix text editor word wrapping

--- a/src/assets/index.css
+++ b/src/assets/index.css
@@ -219,6 +219,7 @@
 
   .ProseMirror {
     font-feature-settings: var(--default-font-feature-settings) !important;
+    overflow-wrap: anywhere !important; 
   }
 
   .ProseMirror h1,
